# parlex

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
install/: install.sh  simplex-repeater.service
package/: build_deb.sh
package/DEBIAN/: conffiles  control  postinst  postrm  prerm
parlex/: __init__.py  announcements.py  audio.py  commands.py  config.py  dtmf.py  main.py  ptt.py  repeater.py  storage.py  tones.py  tui.py
